Change some details about author

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "MobileDevelopment",
     "slug": "MobileDevelopment",
     "version": "1.0.0",
-    "description": "Author - Andrew Y, Organization Identifier - ua.kpi.comsys.8229",
+    "description": "Author - Andrew Y, Organization Identifier - ua.kpi.comsys.IO-8229",
     "orientation": "portrait",
     "icon": "./assets/icons/Icon-72.png",
     "splash": {
