--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mobile_development",
   "version": "1.0.0",
   "author": "Andrew Y",
-  "description": "Organization Identifier - ua.kpi.comsys.8229",
+  "description": "Organization Identifier - ua.kpi.comsys.IO-8229",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
