--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.9.2",
     "@types/d3-shape": "^2.0.0",
     "expo": "~40.0.0",
+    "expo-screen-orientation": "~2.1.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -25,7 +26,10 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-svg": "12.1.0",
+    "react-native-switch-selector": "^2.0.6",
+    "react-native-web": "~0.13.12",
+    "victory-native": "^35.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
