--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-svg": "12.1.0",
     "react-native-switch-selector": "^2.0.6",
     "react-native-web": "~0.13.12",
-    "victory-native": "^35.3.1"
+    "victory-native": "^35.3.1",
+    "expo-image-picker": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
