--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.14.2",
     "@types/d3-shape": "^2.0.0",
     "expo": "~40.0.0",
+    "expo-image-picker": "~9.2.0",
     "expo-screen-orientation": "~2.1.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
@@ -32,8 +33,7 @@
     "react-native-svg": "12.1.0",
     "react-native-switch-selector": "^2.0.6",
     "react-native-web": "~0.13.12",
-    "victory-native": "^35.3.1",
-    "expo-image-picker": "~9.2.0"
+    "victory-native": "^35.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
